@@ -2,57 +2,45 @@ package fr.insee.sabianedata.ws.service;
 
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import fr.insee.sabianedata.ws.model.pearl.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class PearlExtractEntities {
 
-    @Autowired
-    PearlTransformService pearlTransformService;
+    private final PearlTransformService pearlTransformService;
 
-    public List<SurveyUnitDto> getPearlSurveyUnitsFromFods(File fods) throws Exception {
+    public List<PearlSurveyUnit> getPearlSurveyUnitsFromFods(File fods) throws Exception {
         File file = pearlTransformService.getPearlSurveyUnits(fods);
         XmlMapper xmlMapper = new XmlMapper();
-        SurveyUnits surveyUnits = xmlMapper.readValue(file, SurveyUnits.class);
-        return surveyUnits.getSurveyUnits() != null ? surveyUnits.getSurveyUnits() : new ArrayList<>();
+        PearlSurveyUnits pearlSurveyUnits = xmlMapper.readValue(file, PearlSurveyUnits.class);
+        return pearlSurveyUnits.getSurveyUnits() == null ? new ArrayList<>() :
+                pearlSurveyUnits.getSurveyUnits().stream().map(surveyUnit -> {
+                    surveyUnit.cleanAttributes();
+                    return surveyUnit;
+                }).toList();
     }
 
-    public List<InterviewerDto> getPearlInterviewersFromFods(File fods) throws Exception {
-        File file = pearlTransformService.getPearlInterviewers(fods);
-        XmlMapper xmlMapper = new XmlMapper();
-        InterviewersDto interviewers = xmlMapper.readValue(file, InterviewersDto.class);
-        return interviewers.getInterviewers() != null ? interviewers.getInterviewers() : new ArrayList<>();
-    }
-
-    public List<OrganisationUnitContextDto> getPearlOrganisationUnitsFromFods(File fods) throws Exception {
-        File file = pearlTransformService.getPearlContext(fods);
-        XmlMapper xmlMapper = new XmlMapper();
-        Context context = xmlMapper.readValue(file, Context.class);
-        return context.getOrganisationUnits() != null ? context.getOrganisationUnits() : new ArrayList<>();
-    }
-
-    public CampaignDto getPearlCampaignFromFods(File fods) throws Exception {
+    public PearlCampaign getPearlCampaignFromFods(File fods) throws Exception {
         File file = pearlTransformService.getPearlCampaign(fods);
         XmlMapper xmlMapper = new XmlMapper();
-        CampaignDto campaignDto = xmlMapper.readValue(file, CampaignDto.class);
-        List<Visibility> visibilities = campaignDto.getVisibilities();
-        List<Visibility> newVisibilities = visibilities.stream().map(v -> new Visibility(v))
-                .collect(Collectors.toList());
-        campaignDto.setVisibilities(newVisibilities);
-        return campaignDto;
+        PearlCampaign pearlCampaign = xmlMapper.readValue(file, PearlCampaign.class);
+        List<Visibility> visibilities = pearlCampaign.getVisibilities();
+        List<Visibility> newVisibilities = visibilities.stream().map(Visibility::new).toList();
+        pearlCampaign.setVisibilities(newVisibilities);
+        return pearlCampaign;
     }
 
     public List<Assignement> getAssignementsFromFods(File fods) throws Exception {
         File file = pearlTransformService.getPearlAssignement(fods);
         XmlMapper xmlMapper = new XmlMapper();
         Assignements assignementList = xmlMapper.readValue(file, Assignements.class);
-        return assignementList.getAssignements() != null ? assignementList.getAssignements() : new ArrayList<>();
+        return assignementList.getAssignments() != null ? assignementList.getAssignments() : new ArrayList<>();
     }
 
 }
